--- a/Web.config
+++ b/Web.config
@@ -27,9 +27,9 @@
     </handlers>
 	  <httpProtocol>
 		  <customHeaders>
-			  <add name="Access-Control-Allow-Origin" value="*"/>
-			  <add name="Access-Control-Allow-Headers" value="Content-Type"/>
-			  <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE"/>
+			  <add name="Access-Control-Allow-Origin" value="*" />
+			  <add name="Access-Control-Allow-Headers" value="Content-Type" />
+			  <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE" />
 
 		  </customHeaders>
 	  </httpProtocol>
@@ -76,10 +76,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="ColegioEntities" connectionString="metadata=res://*/LosAlumnos.csdl|res://*/LosAlumnos.ssdl|res://*/LosAlumnos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Colegio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ColegioEntities2" connectionString="metadata=res://*/Alumnos.csdl|res://*/Alumnos.ssdl|res://*/Alumnos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Colegio;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="ColegioEntities" connectionString="metadata=res://*/LosAlumnos.csdl|res://*/LosAlumnos.ssdl|res://*/LosAlumnos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Colegio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="ColegioEntities2" connectionString="metadata=res://*/Alumnos.csdl|res://*/Alumnos.ssdl|res://*/Alumnos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Colegio;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="ColegioEntities3" connectionString="metadata=res://*/ColegioEntitiesModel.csdl|res://*/ColegioEntitiesModel.ssdl|res://*/ColegioEntitiesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Colegio;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
